<?xml version="1.0"?>
<package>
    <name>vrep_obstacle_avoidance</name>
    <version>0.0.1</version>
    <description>The vrep_obstacle_avoidance package</description>


    <maintainer email="mitka@agh.edu.pl">Lukasz Mitka</maintainer>

    <license>GPLv3</license>

    <!-- <url type="website">http://wiki.ros.org/proximity_sensor</url> -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>vrep_common</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>vrep_common</run_depend>

</package>